# Copyright (C) 2010 Red Hat, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA  02110-1301, USA.  A copy of the GNU General Public License is
# also available at http://www.gnu.org/copyleft/gpl.html.

EXTRA_DIST = \
  adddomain.py \
  addhost.py \
  addpool.py \
  addvolume.py \
  changehost.py \
  configscreen.py \
  createmeter.py \
  createnetwork.py \
  createuser.py \
  definenet.py \
  destroynetwork.py \
  domainconfig.py \
  halworker.py \
  hostconnect.py \
  hostmenu.py \
  __init__.py \
  libvirtworker.py \
  listdomains.py \
  listnetworks.py \
  listpools.py \
  mainmenu.py \
  menuscreen.py \
  migratedomain.py \
  netmenu.py \
  networkconfig.py \
  nodeadmin.py \
  nodemenu.py \
  poolconfig.py \
  removedomain.py \
  removehost.py \
  removepool.py \
  removevolume.py \
  setup.py \
  startdomain.py \
  startpool.py \
  stopdomain.py \
  stoppool.py \
  storagemenu.py \
  undefinenetwork.py \
  userworker.py \
  utils.py \
  volumeconfig.py
